# sologs

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  RESULTS.md  sologs-benchmark.cpp
components/: CMakeLists.txt
components/api/: CMakeLists.txt
components/crypto/: CMakeLists.txt  crypto.cpp
components/database/: CMakeLists.txt  auth_repository.cpp
components/domain/: CMakeLists.txt
components/domain/include/domain/: log_entry.h
components/service/: CMakeLists.txt  bootstrap_service.cpp
components/utils/: CMakeLists.txt
components/utils/include/utils/: utils.h
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  server-drogon.cpp  server.cpp  server.h
src/crypto/: CMakeLists.txt  crypto.cpp  crypto.h  sha256.cpp  sha256.h
src/db/: CMakeLists.txt  auth_repository.cpp  auth_repository.h  database.cpp  database.h  log_repository.cpp  log_repository.h
src/domain/: CMakeLists.txt  auth.h  log_entry.h
src/service/: CMakeLists.txt  auth_service.cpp  auth_service.h  bootstrap_service.cpp  bootstrap_service.h  key_service.cpp  key_service.h  log_service.cpp  log_service.h  user_service.cpp  user_service.h
src/sologs/: CMakeLists.txt  main.cpp
src/sologs/crypto/: CMakeLists.txt
src/sologs/database/: CMakeLists.txt  auth_repository.h  database.cpp  database.h  log_repository.cpp  log_repository.h
src/sologs/domain/: CMakeLists.txt  auth.h
src/sologs/server/: CMakeLists.txt  server.cpp  server.h
src/sologs/service/: CMakeLists.txt  bootstrap_service.h  log_service.cpp  log_service.h  user_service.cpp  user_service.h
src/sologs/utils/: CMakeLists.txt  utils.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h
tests/: CMakeLists.txt  database_tests.cpp
tests/api/: server_get_tests.cpp  server_get_users_tests.cpp  server_post_tests.cpp
tests/db/: auth_repo_tests.cpp  db_batch_tests.cpp  db_execute_tests.cpp  db_init_tests.cpp  db_prepared_tests.cpp  db_query_tests.cpp  repo_get_tests.cpp  repo_init_tests.cpp  repo_insert_tests.cpp
tests/e2e/: auth_e2e_tests.cpp  log_e2e_tests.cpp
tests/service/: auth_service_tests.cpp  log_service_create_log_tests.cpp
tests/utils/: db_setup.cpp  db_utils.h  db_validate.cpp
